# lemon_tools

./: .eslintrc.cjs  .gitignore  .prettierrc  LICENSE  README.md  package-lock.json  package.json  vite.config.js
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: create_icon.rs  main.rs  pic_compress.rs  search_file.rs  sys.rs  video.rs
src/assets/json/: 2023.json  index.js
src/components/hoc/: WithTransition.jsx
src/icons/: index.jsx
src/layouts/: index.css  index.jsx
src/lib/: keyboard.js  video.js
src/pages/bug-report/: index.jsx
src/pages/calendar/: const.jsx  detail.jsx  index.jsx
src/pages/config/: imgList.jsx  index.css  index.jsx
src/pages/create-icon/: index.jsx
src/pages/create-icon/components/: tags.jsx
src/pages/energy-bar/: index.css  index.jsx
src/pages/finder/: index.css  index.jsx
src/pages/idea/: index.jsx
src/pages/index/: index.css  index.jsx
src/pages/sys-info/: index.jsx
src/pages/video/: index.jsx
src/pages/video-convert/: index.jsx  index.less
src/pages/video-convert/components/: settingDrawer.jsx
src/pages/webfront/: index.jsx
src/pages/webfront/components/energy-bar/: index.jsx
src/pages/webfront/components/finder/: index.jsx
src/pages/webfront/components/json/: index.css  index.jsx
src/pages/webfront/components/pic-compress/: index.jsx
src/router/: index.jsx
src/store/: index.js  system.js
src/utils/: common.js  conf.js
