[package]
name = "lemon_tools"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "protocol-asset", "fs-all", "notification-all", "path-all", "dialog-all", "shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
image = "0.24.7"
base64 = "0.21.2"
regex = "1.9.3"
sysinfo = { version = "0.29.8", features = ["serde"] }
oxipng = "9.0.0"
mozjpeg = "0.9.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
